fixed overlapping issues with top navbar and wrapping with footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,19 @@
 body {
     font-family: 'Lato', sans-serif;
     font-size: 14px;
-    height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
+    align-items: stretch;
 }
 
 #navbar ul {
     list-style-type: none;
-    margin: 10px;
-    padding: 10px;
-    overflow: hidden;
-    min-height: 50px;
+    margin: 0px;
+    padding: 0px;
+    /* min-height: 50px; */
+    background-color: salmon;
+    /* Need to fix hitbox on top navigations buttons */
 }
 
 #navbar ul li {
@@ -53,8 +54,7 @@ body {
     align-items: center;
     height: 80vh;
     position: relative;
-    bottom: 50px;
-}
+} 
 
 div input {
     width: 35em;
@@ -106,8 +106,21 @@ div input:hover {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
 
-  #footer ul li a:hover {
-      text-decoration: underline;
-  }
+#footer ul li a:hover {
+    text-decoration: underline;
+}
+  
+@media (max-width: 577px) {
+
+    #footer ul {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+    } 
+    
+}
+
+/* style="float: right"*/
